cluster/heimdall/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: heimdall-pvc
      containers:
        - name: heimdall
          image: lscr.io/linuxserver/heimdall:latest@sha256:d24d077a23431e5205a838969d4eee3675e65656b526f44998087ae428c014bf
          volumeMounts:
            - name: config
              mountPath: /config
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
spec:
  selector:
    app: heimdall
  ports:
    - protocol: TCP
      port: 80
