cluster/heimdall/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall
  namespace: heimdall
  annotations:
    external-dns.alpha.kubernetes.io/target: werethemille.rs
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - werethemille.rs
      secretName: heimdall-tls
  rules:
    - host: werethemille.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heimdall
                port:
                  number: 80
